--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-image"
+                srcset="./images/team-1.jpg 1x, ./images/team-1@2x.jpg 2x"
                 src="./images/team-1.jpg"
                 width="264"
                 height="260"
@@ -252,6 +253,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-image"
+                srcset="./images/team-2.jpg 1x, ./images/team-2@2x.jpg 2x"
                 src="./images/team-2.jpg"
                 width="264"
                 height="260"
@@ -295,6 +297,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-image"
+                srcset="./images/team-3.jpg 1x, ./images/team-3@2x.jpg 2x"
                 src="./images/team-3.jpg"
                 width="264"
                 height="260"
@@ -339,6 +342,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-image"
+                srcset="./images/team-4.jpg 1x, ./images/team-4@2x.jpg 2x"
                 src="./images/team-4.jpg"
                 width="264"
                 height="260"
@@ -394,6 +398,10 @@
               <div class="container-img">
                 <img
                   class="portfolio-image"
+                  srcset="
+                    ./images/portfolio-1.jpg    1x,
+                    ./images/portfolio-1@2x.jpg 2x
+                  "
                   src="./images/portfolio-1.jpg"
                   width="360"
                   height="300"
@@ -413,6 +421,10 @@
             <li class="portfolio-list-item">
               <div class="container-img">
                 <img
+                  srcset="
+                    ./images/portfolio-2.jpg    1x,
+                    ./images/portfolio-2@2x.jpg 2x
+                  "
                   src="./images/portfolio-2.jpg"
                   width="360"
                   height="300"
@@ -432,6 +444,10 @@
             <li class="portfolio-list-item">
               <div class="container-img">
                 <img
+                  srcset="
+                    ./images/portfolio-3.jpg    1x,
+                    ./images/portfolio-3@2x.jpg 2x
+                  "
                   src="./images/portfolio-3.jpg"
                   width="360"
                   height="300"
@@ -451,6 +467,10 @@
             <li class="portfolio-list-item">
               <div class="container-img">
                 <img
+                  srcset="
+                    ./images/portfolio-4.jpg    1x,
+                    ./images/portfolio-4@2x.jpg 2x
+                  "
                   src="./images/portfolio-4.jpg"
                   width="360"
                   height="300"
@@ -470,6 +490,10 @@
             <li class="portfolio-list-item">
               <div class="container-img">
                 <img
+                  srcset="
+                    ./images/portfolio-5.jpg    1x,
+                    ./images/portfolio-5@2x.jpg 2x
+                  "
                   src="./images/portfolio-5.jpg"
                   width="360"
                   height="300"
@@ -489,6 +513,10 @@
             <li class="portfolio-list-item">
               <div class="container-img">
                 <img
+                  srcset="
+                    ./images/portfolio-6.jpg    1x,
+                    ./images/portfolio-6@2x.jpg 2x
+                  "
                   src="./images/portfolio-6.jpg"
                   width="360"
                   height="300"
@@ -651,8 +679,10 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="user-privacy-link" href="">Privacy Policy</a>
+              <span>
+                I accept the terms and conditions of the
+                <a class="user-privacy-link" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
 
