--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       </div>
     </footer>
 
-    <div class="hidden backdrop is-open">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn-close" type="button">
           <svg class="modal-btn-close-icon" width="8" height="8">
