--- a/index.html
+++ b/index.html
@@ -135,14 +135,16 @@
     <main>
       <section class="section-main">
         <div class="container">
-          <h1 class="main-header">Effective Solutions for Your Business</h1>
+          <h1 class="main-header text-red-700">
+            Effective Solutions for Your Business
+          </h1>
 
           <button class="first-button" type="button">Order Service</button>
         </div>
       </section>
 
       <section class="section-two-benefits">
-        <div class="container">
+        <div class="container section-two-container">
           <h2 class="benefits visually-hidden">benefits</h2>
           <ul class="main-benefits">
             <li class="main-benefits-list">
@@ -605,7 +607,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="hidden backdrop is-open">
       <div class="modal">
         <button class="modal-btn-close" type="button">
           <svg class="modal-btn-close-icon" width="8" height="8">
